--- a/www/css/index.css
+++ b/www/css/index.css
@@ -50,6 +50,7 @@ body {
     margin-top:30px;
     background:#1089ff;
     color:#FFFFFF;
+    text-align: center;
 }
 
 .label {
@@ -107,4 +108,57 @@ body {
                 0 8px 4px rgba(0,0,0,0.04), 
                 0 16px 8px rgba(0,0,0,0.04),
                 0 32px 16px rgba(0,0,0,0.04);
+}
+
+.edit-information-button {
+    position: relative;
+    display: block;
+    width: 80%;
+    margin:20px 5%;
+    padding:15px 5%;
+    font-size:14px;
+    border:0;
+    background:#ffffff;
+    color:rgb(68, 68, 68);
+}
+
+.edit-information-container {
+    position:fixed;
+    display: none;
+    width:100%;
+    height:100%;
+    background:#eeeeee;
+    z-index:5665;
+    top:0;
+    left:0;
+}
+.edit-information-container.open {
+    display: block;
+}
+
+.edit-information-container-close {
+    position:fixed;
+    top:10px;
+    right:10px;
+    background:#1089ff;
+    color:#FFFFFF;
+    font-size:18px;
+    padding:12px 16px;
+    z-index:5765;
+}
+
+.edit-information-form {
+    position: relative;
+    overflow:auto;
+    height: 100%;
+}
+
+.edit-information-form > .title {
+    position: relative;
+    display: block;
+    font-size:20px;
+    font-weight:normal;
+    text-align:left;
+    width: 80%;
+    margin:20px 5% 10px 5%;
 }
